# limux

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  agent-self-split-plan.md
.github/workflows/: aur-publish.yml  release-linux.yml  release-rpm.yml  rust-quality.yml
docs/: cmux-parity-plan.md  shortcut-remap-testing.md
rust/limux-cli/: Cargo.toml
rust/limux-cli/src/: agent_hooks.rs  main.rs
rust/limux-core/src/: lib.rs
rust/limux-ghostty-sys/src/: lib.rs
rust/limux-host-linux/src/: app_config.rs  control_bridge.rs  ime.rs  keybind_editor.rs  layout_state.rs  main.rs  pane.rs  settings_editor.rs  shortcut_config.rs  split_tree.rs  terminal.rs  window.rs
rust/limux-host-linux/src/ime/: contexts.rs  routing.rs  state.rs
scripts/: appimage-webkit.sh  check.sh  package.sh  xvfb-smoke-test.sh
scripts/tests/: test-package-svg-loader.sh
skills/limux-a2a/: SKILL.md
skills/limux-a2a/agents/: openai.yaml
